[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shbin"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Communications :: File Sharing",
]
authors = [
    {name = "Alvar Maciel", email = "alvar.maciel@shiphero.com"}, 
    {name = "Martín Gaitán", email = "marting@shiphero.com"}
]
dependencies = [
    "pygithub >= 1.55",
    "pyclip >= 0.7.0",
    "python-magic >= 0.4.27",
    "docopt-ng >= 0.8.1",
    "rich >= 12.5",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Shiphero/shbin"

[project.scripts]
shbin = "shbin:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[tool.black]
target-version = ["py38"]
line-length = 120
color = true

[tool.ruff]
target-version = "py38"
line-length = 120

